--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -68,20 +68,11 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Add garden tiles to Holy City + Vanara Village:
-        gfx/tiles/flower.png
-        gfx/tiles/crops.png
-            Allow picking crops and replacing with crop hole tile.
-
-    - Support more directions for objects
-        - Bear rug
-        - Kettle
+    - Add missing diagonal wall behaviors.
 
     - Test new cocoon tiles
         - Add doors
         - Fix tilesheet for pits
-
-    - Remove placeholder tiles for city/village
 
     - Add new frost heart attack+damaged animations
 
