WIP: Add Jade Champion to the Flame Beast fight.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -90,14 +90,13 @@ Current tasks:
     - Add different SFX for charged bow, maybe even per element.
 
     - Jade Champion during Flame Beast
-        - Add Jade Champion NPC by switch to reveal the boss.
-            - "This is it, the source of the Flame Beast's power lies in this pool."
-        - Replace JC NPC with object when the lava is drained.
-            - Check this works correctly if the player loses the fight and retries.
-            - Check this works correctly in randomizer mode.
         - JC warns: 'Focus on the heart, I'll distract the beast!'
         - The beast can target the Jade Champion when choosing where to target.
         - JC will teleport near the beast outside of the lava to attack it when the beast goes to 'emergeWarning'.
+    - Test JC in Flame Beast fight:
+        - After starting the fight and reloading.
+        - After dying and restarting at last save.
+        - Randomizer mode.
 
     - Jade Champion during Storm Beast
         - Put up a barrier when the heart is enraged and add text cue telling player to come to the barrier.
