Improve performance of generating ice tiles, fix various errors.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -149,6 +149,9 @@ Graphics to Implement:
 
 
 Current tasks:
+    - Add test to remove empty tiles masks applied to empty layers.
+        - Delete masks when setting tile to 0/1 to prevent this.
+
     - Apply Cocoon tiles in Cocoon.
 
     - Add exit cutscene for Jade Champion during Storm Beast.
